# streamhist-cpp

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: build_cmake.yml
cmake/: Conan.cmake
include/: CMakeLists.txt
include/streamhist/: CMakeLists.txt  streamhist_bin.h  streamhist_utils.h
src/: CMakeLists.txt  streamhist.cpp
streamhist/: CMakeLists.txt  streamhist.cpp  streamhist.h  streamhist_bin.h  streamhist_container.h  streamhist_utils.h
test/: CMakeLists.txt  constexpr_tests.cpp  test_data1.h  test_data2.h  test_data3.h  test_data4.h  test_histogram.cpp  test_main.cpp  test_regression.cpp
